chore: read keystore password from env, add .env.example and ignore local keystore/tools outputs